--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
+    "core-js": "^3.36.1",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "react-native-webview": "^13.8.4",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
